# sandbox-rls

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  go.mod  go.sum  mkdocs.yml  requirements-docs.txt  test-config.yaml  test_sdk.py
.cursor/agents/: tech-product-doc-writer.md
.cursor/commands/: git-commit-and-push.md
.cursor/plans/: sandbox_service_design_58fb0660.plan.md
.github/workflows/: docs-versioned.yml  docs.yml  release.yml
api/proto/: codebase.proto  common.proto  sandbox.proto
cmd/agentfense-server/: main.go
cmd/sandbox-server/: main.go
configs/: agentfense-server.yaml  sandbox-server.yaml
docs/: DEPLOYMENT.md  README.md
docs/en/: index.md
docs/en/faq/: common-issues.md  index.md  performance.md
docs/en/get-started/: concepts.md  installation.md  quickstart.md
docs/en/reference/: go.md  grpc.md  index.md  python.md
docs/en/sdk/: index.md
docs/en/sdk/python/: async.md  errors.md  high-level.md  overview.md  permissions.md  sessions.md
docs/en/security/: best-practices.md  index.md  permissions.md  presets.md
docs/en/why/: architecture.md  comparison.md  index.md  use-cases.md
docs/stylesheets/: extra.css
docs/zh/: index.md
docs/zh/faq/: common-issues.md  index.md  performance.md
docs/zh/get-started/: concepts.md  installation.md  quickstart.md
docs/zh/reference/: go.md  grpc.md  index.md  python.md
docs/zh/sdk/: index.md
docs/zh/sdk/python/: async.md  errors.md  high-level.md  overview.md  permissions.md  sessions.md
docs/zh/security/: best-practices.md  index.md  permissions.md  presets.md
docs/zh/why/: architecture.md  comparison.md  index.md  use-cases.md
example/ticket-agent/: README.md  agent.py  requirements.txt
example/ticket-agent/data/: TKT-001.txt  TKT-002.txt  TKT-003.txt  secret.txt
internal/codebase/: manager.go  manager_test.go  store.go  store_test.go
internal/config/: config.go  config_test.go
internal/fs/: delta.go  delta_test.go  fuse.go  fuse_test.go  permission.go  permission_test.go
internal/logging/: logger.go
internal/runtime/: runtime.go  runtime_test.go
internal/runtime/bwrap/: bwrap.go  bwrap_test.go  session.go  session_test.go
internal/runtime/docker/: docker.go  docker_test.go  session.go
internal/runtime/mock/: mock.go
internal/server/: server.go  server_test.go
pkg/types/: errors.go  types.go  types_test.go
scripts/: build-release.sh  gen-proto.sh  init-docker.sh  verify-docs.sh
sdk/python/: README.md  pyproject.toml
sdk/python/agentfense/: __init__.py  _shared.py  client.py  sandbox.py  types.py  utils.py
sdk/python/agentfense/_async/: __init__.py  client.py
sdk/python/agentfense/_gen/: codebase_pb2.py  codebase_pb2.pyi  common_pb2.py  common_pb2.pyi  sandbox_pb2.py  sandbox_pb2.pyi  sandbox_pb2_grpc.py
sdk/python/sandbox_rls/: __init__.py  presets.py
sdk/python/sandbox_rls/_async/: __init__.py  sandbox.py
sdk/python/sandbox_sdk/: __init__.py  client.py  exceptions.py  presets.py  sandbox.py  types.py
sdk/python/sandbox_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/sandbox_sdk/_gen/: codebase_pb2.py  codebase_pb2_grpc.py  common_pb2.py  common_pb2.pyi  sandbox_pb2.py  sandbox_pb2.pyi  sandbox_pb2_grpc.py
sdk/python/tests/: __init__.py  test_async.py  test_presets.py  test_sandbox.py  test_session.py  test_types.py
test/integration/: e2e_test.go
